/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.apache.rocketmq.mqtt.common.model.consistency";

message StoreMessage {
  string msgId = 1;
  string firstTopic = 2;
  string originTopic = 3;
  int64 offset = 4;
  int64 nextOffset = 5;
  int32 retry = 6;
  bool retained = 7;
  bool isEmpty = 8;
  bytes payload = 9;
  int64 bornTimestamp = 10;
  int64 storeTimestamp = 11;
  int32 ack = 12;
  map<string, string> userProperties = 13;
}


